hphp/hack/test/pocket_universes/typing/decl3.bad.php.exp
File "decl3.bad.php", line 6, characters 10-10:
Wrong type hint (Typing[4350])
File "decl3.bad.php", line 5, characters 10-12:
Expected int
File "decl3.bad.php", line 6, characters 14-20:
But got string
